--- a/index.html
+++ b/index.html
@@ -320,10 +320,10 @@
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
-                <div class="portfolio-list-info">
-                  <h3 class="portfolio-list-title">Banking App</h3>
-                  <p class="portfolio-list-text">App</p>
-                </div>
+              </div>
+              <div class="portfolio-list-info">
+                <h3 class="portfolio-list-title">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
@@ -339,10 +339,10 @@
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
-                <div class="portfolio-list-info">
-                  <h3 class="portfolio-list-title">Cashless Payment</h3>
-                  <p class="portfolio-list-text">Marketing</p>
-                </div>
+              </div>
+              <div class="portfolio-list-info">
+                <h3 class="portfolio-list-title">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
@@ -358,10 +358,10 @@
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
-                <div class="portfolio-list-info">
-                  <h3 class="portfolio-list-title">Meditation App</h3>
-                  <p class="portfolio-list-text">App</p>
-                </div>
+              </div>
+              <div class="portfolio-list-info">
+                <h3 class="portfolio-list-title">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
@@ -377,10 +377,10 @@
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
-                <div class="portfolio-list-info">
-                  <h3 class="portfolio-list-title">Taxi Service</h3>
-                  <p class="portfolio-list-text">Marketing</p>
-                </div>
+              </div>
+              <div class="portfolio-list-info">
+                <h3 class="portfolio-list-title">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
@@ -396,10 +396,10 @@
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
-                <div class="portfolio-list-info">
-                  <h3 class="portfolio-list-title">Screen Illustrations</h3>
-                  <p class="portfolio-list-text">Design</p>
-                </div>
+              </div>
+              <div class="portfolio-list-info">
+                <h3 class="portfolio-list-title">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
@@ -415,10 +415,10 @@
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
-                <div class="portfolio-list-info">
-                  <h3 class="portfolio-list-title">Online Courses</h3>
-                  <p class="portfolio-list-text">Marketing</p>
-                </div>
+              </div>
+              <div class="portfolio-list-info">
+                <h3 class="portfolio-list-title">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
           </ul>
@@ -473,5 +473,94 @@
         </div>
       </div>
     </footer>
+
+    <!--Modal-->
+    <div class="modal-overlay is-open">
+      <div class="modal">
+        <button class="modal-close" type="button">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your request and we will contact you</p>
+        <form class="modal-form">
+          <div class="label-wrapper">
+            <label class="label" for="user-name">Name</label>
+            <div class="input-wrapper">
+              <input
+                id="user-name"
+                class="input"
+                type="text"
+                name="user-name"
+                required
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/symbol-defs.svg#icon-name"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="label-wrapper">
+            <label class="label" for="phone">Phone</label>
+            <div class="input-wrapper">
+              <input
+                id="phone"
+                class="input"
+                type="tel"
+                name="phone"
+                required
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/symbol-defs.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="label-wrapper">
+            <label class="label" for="email">Email</label>
+            <div class="input-wrapper">
+              <input
+                id="email"
+                class="input"
+                type="email"
+                name="email"
+                required
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/symbol-defs.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="text-wrapper">
+            <label class="label" for="user-comment"> Comment </label>
+            <textarea
+              id="user-comment"
+              class="textarea"
+              name="user-comment"
+              placeholder="Text input"
+            >
+            </textarea>
+          </div>
+          <div class="checkbox">
+            <input
+              type="checkbox"
+              id="user-privacy"
+              class="visually-hidden checkbox-input"
+              value="true"
+              name="user-privacy"
+              required
+            />
+            <label for="user-privacy" class="checkbox-label">
+              <span class="checkbox-part">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/submint.svg#icon-submint"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#" class="privacy-policy-link">Privacy Policy </a>
+            </label>
+          </div>
+          <button class="send-form">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
