--- a/index.html
+++ b/index.html
@@ -556,8 +556,7 @@
               class="textarea"
               name="user-comment"
               placeholder="Text input"
-            >
-            </textarea>
+            ></textarea>
           </div>
           <div class="checkbox">
             <input
@@ -571,7 +570,7 @@
             <label for="user-privacy" class="checkbox-label">
               <span class="checkbox-part">
                 <svg class="checkbox-icon" width="10" height="8">
-                  <use href="./images/submint.svg#icon-submint"></use>
+                  <use href="./images/vector.svg#icon-vector"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
